2013-09-01
    * MIDI OUT velocity is now independent from the "highlight color tint" setting.

2013-07-30
    * new Serbian translation. Thanks to Jay Alexander Fleming

2013-07-21
    * new Galician translation. Thanks to Miguel Bouzada

2013-03-10
    * version string 0.5.99
    * Port to Qt5 (unfinished). Mostly changes for raw keyboard support
    * removed class RawKeybdApp, replaced by class NativeFilter
    * Linux: switch from libX11 to libXCB

2013-02-09
    * release 0.5.1

2013-02-01
    * Fixed bug #3599827. No default keyboard shortcuts available in 0.5.0 on fresh installations
    * Qt5 build compatibility (but not fully functional)

2012-07-31
    * release 0.5.0
    * Qt 4.8.x is required 
    * RtMidi 1.0.15 patched by Gilles Filippini <pini@debian.org> enabling several MIDI drivers to be compiled at once into the same program, and allowing the user to select one at runtime.
    * Fixed Bug #3507732. Transpose does not update correctly the octave in note name. Thanks to Patrick Meaney for the bug report
    * Fixed Bug #3503768. Removing the shortcut for an action having default shortcut keys, the change is not saved upon exit, so the shortcut appears again the next execution.
    * Fixed Bug #3502659. Saved preferences not set correctly.
    * New implementation of the Network MIDI driver (UDP multicast).
    * MIDI channel state enforcement (RFE #3517750)
    * MIDI IN Omni mode.
    * Independently enable/disable note input using keyboard, mouse, and touch screen.
    * Note highlight color policies (single, double, one color for each MIDI channel, one color for each grade in the chromatic scale). Color palettes editor dialog. Option to show a colorized scale.
    * Allow XML comments within keyboard map files.

2011-06-05
    * release 0.4.0

2011-05-01
    * Symbian port started

2011-04-23
    * new Network MIDI driver, based on Qmidinet (http://qmidinet.sf.net) 
    
2011-04-22
    * Merged RtMidi 1.0.14

2011-04-17